# routes/update.js
@@ -3,5 +3,6 @@ var router = express.Router();
 const updateController = require("../controllers/update");
 
 router.get('/', updateController.sendNotificationAPI);
+router.post('/', updateController.insertNewAPI);
 
 module.exports = router;
